<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary">

    <TextView
        android:id="@+id/title2048"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_secondary"
        android:gravity="center"
        android:text="@string/_2048"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/ScoresLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_tertiary"
        android:layout_below="@id/title2048"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ScoreL"
            style="@style/textViews"
            android:layout_weight="1.6"
            android:text="@string/score" />

        <TextView
            android:id="@+id/ScoreNum"
            style="@style/textViews"
            android:layout_weight="1.6"
            android:text="@string/_0" />

        <TextView
            android:id="@+id/RecordL"
            style="@style/textViews"
            android:layout_weight="1.6"
            android:text="@string/record" />

        <TextView
            android:id="@+id/RecordNum"
            style="@style/textViews"
            android:layout_weight="1.6"
            android:text="@string/_0" />

        <TextView
            android:id="@+id/TimerL"
            style="@style/textViews"
            android:layout_weight="1.6"
            android:text="@string/timer" />

        <TextView
            android:id="@+id/TimerNum"
            style="@style/textViews"
            android:text="@string/_0" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ScoresLayout"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start"
            style="@style/buttonsType2"
            android:onClick="start"
            android:text="Play" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reset"
            style="@style/buttonsType2"
            android:onClick="reset"
            android:text="Reset" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Undo"
            style="@style/buttonsType2"
            android:onClick="deshacer"
            android:text="@string/undo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/buttonLayout"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/buttonlayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/start1"
                style="@style/button2048Invis" />

            <GridLayout
                android:id="@+id/gridLayout2048"
                style="@style/GridLayout2048">


                <TextView
                    style="@style/blocks2048"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:text="" />

                <TextView
                    style="@style/blocks2048"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:text="" />

                <TextView
                    style="@style/blocks2048"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:text="" />

                <TextView
                    style="@style/blocks2048"
                    android:layout_row="0"
                    android:layout_column="3"
                    android:text="" />

                <TextView
                    style="@style/blocks2048"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:text="" />

                <TextView
                    style="@style/blocks2048"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:text="" />

                <TextView
                    style="@style/blocks2048"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:text="" />

                <TextView
                    style="@style/blocks2048"
                    android:layout_row="1"
                    android:layout_column="3"
                    android:text="" />

                <TextView
                    style="@style/blocks2048"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:text="" />

                <TextView
                    style="@style/blocks2048"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:text="" />

                <TextView
                    style="@style/blocks2048"
                    android:layout_row="2"
                    android:layout_column="2"
                    android:text="" />

                <TextView
                    style="@style/blocks2048"
                    android:layout_row="2"
                    android:layout_column="3"
                    android:text="" />

                <TextView
                    style="@style/blocks2048"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:text="" />

                <TextView
                    style="@style/blocks2048"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:text="" />

                <TextView
                    style="@style/blocks2048"
                    android:layout_row="3"
                    android:layout_column="2"
                    android:text="" />

                <TextView
                    style="@style/blocks2048"
                    android:layout_row="3"
                    android:layout_column="3"
                    android:text="" />

            </GridLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/right"
                style="@style/button2048Invis" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
