<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary">

    <TextView
        android:id="@+id/titleSenku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_secondary"
        android:gravity="center"
        android:text="@string/senku"
        android:textColor="@color/white"
        android:textSize="48sp" />

    <LinearLayout
        android:id="@+id/statsSenku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_tertiary"
        android:layout_below="@id/titleSenku">

        <TextView
            android:id="@+id/tv_timer_number"
            android:text="@string/_0"
            android:gravity="center"
            style="@style/textViews" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/statsSenku"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resetSenku"
            android:text="@string/reset"
            android:onClick="resetSenku"
            style="@style/buttonsType2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/undoSenku"
            android:text="@string/deshacer"
            android:onClick="undoSenku"
            style="@style/buttonsType2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/textViewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/buttonLayout"
        android:orientation="vertical">

        <GridLayout
            android:id="@+id/gridLayoutSenku"
            style="@style/GridLayoutSenku">
            <androidx.appcompat.widget.AppCompatButton
                style="@style/voidCircle"
                android:layout_row="0"
                android:layout_column="0" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/voidCircle"
                android:layout_row="0"
                android:layout_column="1" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="0"
                android:layout_column="2" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="0"
                android:layout_column="3" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="0"
                android:layout_column="4" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/voidCircle"
                android:layout_row="0"
                android:layout_column="5" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/voidCircle"
                android:layout_row="0"
                android:layout_column="6" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/voidCircle"
                android:layout_row="1"
                android:layout_column="0" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/voidCircle"
                android:layout_row="1"
                android:layout_column="1" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="1"
                android:layout_column="2" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="1"
                android:layout_column="3" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="1"
                android:layout_column="4" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/voidCircle"
                android:layout_row="1"
                android:layout_column="5" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/voidCircle"
                android:layout_row="1"
                android:layout_column="6" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="2"
                android:layout_column="0" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="2"
                android:layout_column="1" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="2"
                android:layout_column="2" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="2"
                android:layout_column="3" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="2"
                android:layout_column="4" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="2"
                android:layout_column="5" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="2"
                android:layout_column="6" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="3"
                android:layout_column="0" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="3"
                android:layout_column="1" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="3"
                android:layout_column="2" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"
                android:layout_row="3"
                android:layout_column="3"
                android:background="@drawable/ic_void_circle"
                />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"
                android:layout_row="3"
                android:layout_column="4" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="3"
                android:layout_column="5" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="3"
                android:layout_column="6" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="4"
                android:layout_column="0" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="4"
                android:layout_column="1" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="4"
                android:layout_column="2" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="4"
                android:layout_column="3" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="4"
                android:layout_column="4" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="4"
                android:layout_column="5" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="4"
                android:layout_column="6" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/voidCircle"
                android:layout_row="5"
                android:layout_column="0" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/voidCircle"
                android:layout_row="5"
                android:layout_column="1" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="5"
                android:layout_column="2" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="5"
                android:layout_column="3" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="5"
                android:layout_column="4" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/voidCircle"
                android:layout_row="5"
                android:layout_column="5" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/voidCircle"
                android:layout_row="5"
                android:layout_column="6" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/voidCircle"
                android:layout_row="6"
                android:layout_column="0" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/voidCircle"
                android:layout_row="6"
                android:layout_column="1" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="6"
                android:layout_column="2" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="6"
                android:layout_column="3" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/filledCircle"

                android:layout_row="6"
                android:layout_column="4" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/voidCircle"
                android:layout_row="6"
                android:layout_column="5" />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/voidCircle"
                android:layout_row="6"
                android:layout_column="6" />

        </GridLayout>

    </LinearLayout>
</RelativeLayout>